<resources>
    <string name="app_name">My Application</string>
    <string name="welcome_to_marathon_app">Welcome to Marathon App</string>
    <string name="fill_the_form_to_join">Fill the form to join</string>
    <string name="first_name">First Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="last_name">Last Name</string>
    <string name="button_submit">Submit</string>
    <string name="your_info">Your Info</string>
    <string name="user_greeting">Thank you for your participation</string>
    <string name="marathon_greeting">Welcome to Youssoufia Marathon</string>
    <string name="yy_presentation">Youssoufia is the capital of Youssoufia Province in Marrakesh-Safi, Morocco. In the 2014 Moroccan census it recorded a population of 67,628, up from 64,518 ten years ago. It is known for its phosphate production.</string>
    <string name="yy">Youssoufia</string>
    <string name="join_marathon">Join the marathon</string>
</resources>